[package]
name = "cross-partition-order-book"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures-util = "0.3.31"
rdkafka = { version = "0.38.0", features = ["tokio"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.7", features = ["v4"] }